--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -1436,12 +1436,32 @@
         width: 40px;
         height: 40px;
         border: 3px solid white;
+
     }
 
     .circulo__2 {
         width: 40px;
         height: 40px;
-        border: 6px solid white;
+        border: 4px solid white;
+        margin-left: 8px;
+    }
+
+    @keyframes mymove {
+        0% {
+            right: 0px;
+        }
+
+        25% {
+            right: 15px;
+        }
+
+        50% {
+            right: 15px;
+        }
+
+        100% {
+            right: 0px;
+        }
     }
 
     /*flecha q va */
@@ -1458,9 +1478,10 @@
     }
 
     .elemento__titulo {
-        font-size: 8px;
+        font-size: 10px;
     }
 
+    /* NavBar */
     .navbar__link {
         font-size: 16px;
     }
@@ -1511,32 +1532,35 @@
     .detalles {
         font-size: 15px;
         letter-spacing: 2px;
-        line-height: 25px;
+        line-height: 20px;
         margin-top: 1em;
         text-align: justify;
     }
 
     summary {
-        color: black;
         margin: 20px 0;
+        color: aqua;
     }
 
     /* Ministerios */
-    .ministerios{
-        height: auto;
+    .ministerios {
+        height: 70vh;
     }
-    .ministeriosCard{
+
+    .ministeriosCard {
         width: 95%;
-       
     }
-    .ministeriosCard__imagen{
+
+    .ministeriosCard__imagen {
         width: 40%;
     }
-    .ministeriosCard__texto{
+
+    .ministeriosCard__texto {
         width: 90%;
         padding: 10px;
     }
-    .ministeriosCard__parrafo{
+
+    .ministeriosCard__parrafo {
         font-size: 12px;
         line-height: 15px;
         text-align: justify;
@@ -1544,33 +1568,39 @@
 
 
     /* Cuarto */
-    .cuarto{
-        height: auto;
+    .cuarto {
+        height: 70vh;
         padding: 0;
     }
-    .cuartoCard{
+
+    .cuartoCard {
         width: 95%;
     }
-    .cuartoCard__imagen{
+
+    .cuartoCard__imagen {
         width: 40%;
     }
-    .cuartoCard__texto{
+
+    .cuartoCard__texto {
         width: 90%;
         padding: 10px;
     }
-    .cuartoCard__tituloPre{
+
+    .cuartoCard__tituloPre {
         font-size: 15px;
     }
-    .cuartoCard__titulo{
+
+    .cuartoCard__titulo {
         font-size: 20px;
         line-height: 22px;
     }
-    .cuartoCard__parrafo{
+
+    .cuartoCard__parrafo {
         font-size: 12px;
         line-height: 15px;
         text-align: justify;
     }
-  
+
 
     /* testimonios */
     .swiper-texto {
