--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 id {
-  scroll-margin-top: 80px;
+  scroll-margin-top: 0px;
 }
 
 /*Contenedor general (grilla layaut)*/
@@ -58,8 +58,15 @@ id {
 .loader__contenedor {
   width: 100vw;
   height: 100vh;
-  background-color: #74EBD5;
-  background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%);
+  /* background-color: #74EBD5;
+  background-image: linear-gradient(90deg, #74EBD5 0%, #9FACE6 100%); */
+  background: #16222A;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #3A6073, #16222A);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #3A6073, #16222A);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   position: fixed;
   z-index: 9999;
   top: 0;
@@ -717,7 +724,7 @@ id {
 /* banner */
 .banner {
   grid-area: banner;
-  background: url(img/main.png);
+  background: url(img/nubes\ banner.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -847,7 +854,7 @@ id {
 }
 
 summary {
-  color: rgb(42, 40, 40);
+  color: aqua;
   margin: 20px 0;
   cursor: pointer;
   outline: none;
@@ -1411,10 +1418,15 @@ summary {
 /* MINISTERIOS SECTION */
 .ministerios {
   width: 100%;
-  height: auto;
+  height: 80vh;
   grid-area: ministerios;
-  background: #0b2e41;
+  background-color: white;
+  background: linear-gradient(90deg, #f1f1f1, #d5d5d5);
   padding: 2em 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
 
 }
@@ -1519,10 +1531,12 @@ summary {
   width: 100%;
   height: auto;
   grid-area: cuarto;
-  background: #0b2e41;
-  
+  background-color: white;
+  background: linear-gradient(90deg, #f1f1f1, #d5d5d5);
 
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Cuarto card */
@@ -1587,7 +1601,7 @@ summary {
 }
 
 .cuartoCard__parrafo {
-   color: black;
+  color: black;
   font-size: 10px;
   line-height: 20px;
   padding: 10px;
