--- a/style.css
+++ b/style.css
@@ -1262,7 +1262,7 @@ summary {
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
 
-  background: url('img/preadolescente.jpg');
+  background: url('img/preadolescentes.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: center;
