--- a/cuarto.css
+++ b/cuarto.css
@@ -524,9 +524,9 @@ blockquote {
         font-size: 15px;
     }
 
+}
 
-
-
-
-
+/* Samsung TabE (Martina) */
+@media only screen and (max-width: 821px) {
+ 
 }
