grid gap multimedia

--- a/podcast.css
+++ b/podcast.css
@@ -34,7 +34,7 @@ section[id] {
     max-width: 65em;
 
     margin: 1.2em auto;
-    grid-gap: 1.7em;
+    grid-gap: .7em;
     display: grid;
 
     grid-template-columns: repeat(3, 1fr);
