--- a/precursores.css
+++ b/precursores.css
@@ -34,8 +34,9 @@ section[id] {
     max-width: 65em;
 
     margin: 1.2em auto;
-    grid-gap: 1.7em;
+    grid-gap: .7em;
     display: grid;
+
 
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, auto);
