--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -258,8 +258,13 @@
         width: 8%;
     }
 
+    .main {
+        height: 100vh;
+        background-position: bottom;
+    }
+
     .main::before {
-        height: 70vh;
+        height: 100vh;
     }
 
     .main__titulo {
@@ -375,6 +380,32 @@
         font-size: 14px;
     }
 
+       /* ministerio */
+       .ministerios {
+        height: 60vh;
+    }
+
+    .ministeriosCard {
+        width: 90%;
+    }
+
+    .ministeriosCard__imagen {
+        width: 150%;
+    }
+
+    /* cuarto */
+    .cuarto {
+        height: 60vh;
+    }
+
+    .cuartoCard {
+        width: 90%;
+    }
+
+    .cuartoCard__imagen {
+        width: 150%;
+    }
+
     /* testimonios */
     .swiper-texto {
         height: 45%;
@@ -409,36 +440,7 @@
     }
 
     /* Cuarto */
-    .cuarto {
-        height: 200px;
-        padding: 10px;
-        align-items: center;
-        justify-content: space-evenly;
-    }
 
-    .cuarto::before {
-        height: 200px;
-    }
-
-    .cuarto i {
-        font-size: 30px;
-        margin: 0;
-    }
-
-    .cuarto__titulo {
-        margin: 0;
-    }
-
-    .cuarto__parrafo {
-        width: 90%;
-        font-size: 10px;
-        line-height: normal;
-        margin: 0;
-    }
-
-    .cuarto__btn {
-        margin: 0px;
-    }
 
 }
 
@@ -1035,6 +1037,9 @@
         font-size: 12px;
         line-height: normal;
     }
+
+
+
 
 
     /* testimonios */
