--- a/style.css
+++ b/style.css
@@ -332,7 +332,6 @@ id {
 }
 
 /*Main (contendido principal*/
-
 .main {
   width: 100%;
   height: 600px;
@@ -489,7 +488,7 @@ id {
 
 /*Rehma*/
 .article {
-  scroll-margin-top: -90px;
+  /* scroll-margin-top: -90px; */
   width: 100%;
   height: auto;
   display: flex;
@@ -556,7 +555,7 @@ id {
 
 /* Pantalla dividida izquierda*/
 .dividida__left {
-  scroll-margin-top: 0px;
+  /* scroll-margin-top: 0px; */
   grid-area: divLeft;
   /* height: 100%; */
   height: auto;
@@ -638,7 +637,7 @@ id {
 
 /* Pantalla dividida derecha*/
 #dividida__right {
-  scroll-margin-top: 0px;
+  /* scroll-margin-top: 0px; */
 }
 
 .dividida__right {
@@ -695,7 +694,9 @@ id {
   padding: 60px;
   text-align: right;
   /* background: linear-gradient( var(--color-tres), rgba(255, 255, 255, 0.289), rgba(0, 0, 255, 0.1)); */
-  background: #3498dba1;
+  /* background: #3498dba1; */
+  /* background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%); */
+  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
   z-index: 9;
 }
 
@@ -782,7 +783,7 @@ id {
 /* estructura de texto y foto */
 
 .mision {
-  scroll-margin-top: 0px;
+  /* scroll-margin-top: 0px; */
   width: 100%;
   height: 100%;
   grid-area: mision;
@@ -898,7 +899,7 @@ summary {
 
 /*Precursores (Videos de Youtube*/
 .aside {
-  scroll-margin-top: 0px;
+  /* scroll-margin-top: 0px; */
   width: 100%;
   height: 100vh;
   grid-area: aside;
@@ -1133,7 +1134,7 @@ summary {
 
 /*iglesia */
 .iglesia {
-  scroll-margin-top: 0px;
+  /* scroll-margin-top: 0px; */
   width: 100%;
   height: auto;
   grid-area: section;
@@ -1422,9 +1423,11 @@ summary {
   height: 80vh;
   grid-area: ministerios;
   background-color: white;
-  background: linear-gradient(90deg, #f1f1f1, #d5d5d5);
+  /* background: linear-gradient(90deg, #f1f1f1, #d5d5d5); */
+  /* background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%); */
+  /* background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%); */
+  background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
   padding: 2em 0;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1533,7 +1536,10 @@ summary {
   height: auto;
   grid-area: cuarto;
   background-color: white;
-  background: linear-gradient(90deg, #f1f1f1, #d5d5d5);
+  /* background: linear-gradient(90deg, #f1f1f1, #d5d5d5); */
+  /* background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%); */
+  /* background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%); */
+  background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
 
   display: flex;
   align-items: center;
@@ -1657,7 +1663,7 @@ summary {
 }
 
 .swiper {
-  scroll-margin-top: 0px;
+  /* scroll-margin-top: 0px; */
   width: 100%;
   height: 100vh;
   grid-area: testimonios;
@@ -1802,7 +1808,7 @@ summary {
 
 /*Galeria*/
 .galeria {
-  scroll-margin-top: 0px;
+  /* scroll-margin-top: 0px; */
   grid-area: galeria;
   width: 100%;
   height: auto;
