--- a/style.css
+++ b/style.css
@@ -694,9 +694,7 @@ id {
   padding: 60px;
   text-align: right;
   /* background: linear-gradient( var(--color-tres), rgba(255, 255, 255, 0.289), rgba(0, 0, 255, 0.1)); */
-  /* background: #3498dba1; */
-  /* background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%); */
-  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+  background: #3498dba1;
   z-index: 9;
 }
 
@@ -1423,10 +1421,7 @@ summary {
   height: 80vh;
   grid-area: ministerios;
   background-color: white;
-  /* background: linear-gradient(90deg, #f1f1f1, #d5d5d5); */
-  /* background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%); */
-  /* background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%); */
-  background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+  background: linear-gradient(90deg, #f1f1f1, #d5d5d5);
   padding: 2em 0;
   display: flex;
   align-items: center;
@@ -1536,11 +1531,7 @@ summary {
   height: auto;
   grid-area: cuarto;
   background-color: white;
-  /* background: linear-gradient(90deg, #f1f1f1, #d5d5d5); */
-  /* background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%); */
-  /* background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%); */
-  background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
-
+  background: linear-gradient(90deg, #f1f1f1, #d5d5d5); 
   display: flex;
   align-items: center;
   justify-content: center;
