--- a/style.css
+++ b/style.css
@@ -337,11 +337,11 @@ id {
 .main {
   width: 100%;
   height: 600px;
-  /* background: url(img/main\ portada.png);
+  background: url(img/main\ portada.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: -3em;
-  background-attachment: fixed; */
+  /* background-attachment: fixed; */
 
   grid-area: main;
   position: relative;
@@ -361,17 +361,8 @@ id {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 0;
-}
-.main video{
-  width: 100%;
-  height: 600px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  object-position: top;
 }
 
 .main__text {
