--- a/style.css
+++ b/style.css
@@ -739,8 +739,9 @@ id {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: fixed;
   width: 100%;
-  height: 220px;
+  height: 320px;
   display: flex;
   text-align: center;
   justify-content: center;
@@ -751,7 +752,7 @@ id {
 
 .banner::before {
   width: 100%;
-  height: 220px;
+  height: 320px;
   content: '';
   position: absolute;
   top: 0;
@@ -763,28 +764,44 @@ id {
 }
 
 .banner cite {
+  font-size: 20px;
   color: wheat;
   z-index: 2;
 }
 
 .banner__titulo {
-  font-size: 30px;
+  font-size: 50px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   line-height: 50px;
   color: white;
   z-index: 2;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  position: absolute;
+  margin-top: 125%;
+
+
+}
+
+#bannerTitulo{
+  width: 100%;
+  position: relative;
+
 }
 
 .banner__img {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   z-index: 2;
   border: 3px solid white;
   border-radius: 50%;
   position: absolute;
-  left: 35%;
+  left: 30%;
   bottom: 35px;
   filter: contrast(100%),
 }
